# async-pyserial

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: codecov-publish.yml  docs-publish.yml  python-publish.yml  unittest.yml
async_pyserial/: __init__.py  async_pyserial_core.pyi  backend.py  common.py  native_serialport.py
async_pyserial/survey/: serialposix.py
core/include/base/: serialport.h
core/include/bsd/: serialport.h
core/include/common/: Event.hpp  Exception.hpp  Util.hpp  common.h  event.h  exception.h  util.h
core/include/darwin/: serialport.h
core/include/linux/: serialport.h
core/include/win/: WinSerialPort.hpp
core/include/win32/: serialport.h
core/lib/: binding.cpp
core/lib/bsd/: serialport.cpp
core/lib/common/: Event.cpp  event.cpp  util.cpp
core/lib/darwin/: serialport.cpp
core/lib/linux/: serialport.cpp
core/lib/pybind/: WinSerialPort.cpp
core/lib/win/: WinSerialPort.cpp  serialport.cpp
core/lib/win32/: serialport.cpp
core/tests/common/: EventTest.cpp  event_test.cpp  serialport_test.cpp
docs/: INSTRUCTIONS.rst
docs/source/: conf.py  index.rst
examples/: interval_write.py  serialport_read.py  serialport_terminal.py
src/: __init__.py  async_pyserial_core.pyi  common.py  native_serialport.py  win_serialport.py
tests/: serialport_test.py  test_event.py  test_platform.py  test_serialport.py  test_util.py
tests/asyncio/: test_serialport.py
tests/callback/: test_serialport.py
tests/common/: test_event.py
tests/eventlet/: test_serialport.py
tests/gevent/: test_serialport.py
tests/sync/: test_serialport.py
