[tool.poetry]
name = "async_pyserial"
version = "0.1.0"
description = ""
authors = ["Neil Lei <qwe17235@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^71.0.1"

[project]
name = "async_pyserial"
version = "0.1.0"
description = "Python bindings for a C++ serial port library"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = []


[tool.poetry.group.dev.dependencies]
pybind11 = "^2.13.1"
mypy = "^1.10.1"
pybind11-stubgen = "^2.5.1"
setuptools = "^71.0.1"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
