[tool.poetry]
name = "async_pyserial"
version = "0.1.3"
description = "Python bindings for a C++ serial port library"
authors = ["Neil Lei <qwe17235@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"

[project]
name = "async_pyserial"
version = "0.1.3"
description = "Python bindings for a C++ serial port library"
authors = [
    {name = "Neil Lei", email = "qwe17235@gmail.com"}
]
dependencies = []
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Lei-k/async-pyserial/tree/main"
Issues = "https://github.com/Lei-k/async-pyserial/issues"

[tool.poetry.group.dev.dependencies]
pybind11 = "^2.13.1"
mypy = "^1.10.1"
pybind11-stubgen = "^2.5.1"
setuptools = "^71.0.1"
wheel = "^0.43.0"
build = "^1.2.1"
twine = "^5.1.1"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
gevent = "^24.2.1"
eventlet = "^0.36.1"
asyncio = "^3.4.3"

[build-system]
requires = ["setuptools>=71.0.1", "pybind11>=2.13.1", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[virtualenvs]
in-project = true
